# nutri-scan

./: .env.example  .gitignore  AGENTS.md  CONTEXT-MAP.md  docker-compose.yml  prd_nutriscan.md
services/ai-inference/: .gitignore  CONTEXT.md  DATASET_COLLABORATION.md  DATASET_VERSION.md  MODEL_COMPARISON.md  README.md  RUNBOOK.md  pyproject.toml
services/ai-inference/app/: __init__.py  classifier.py  energy.py  main.py  payload.py  runtime.py
services/ai-inference/configs/: baseline_training.json  baseline_training_v2.json  convnext_tiny_control_label_smoothing.json  convnext_tiny_tune_img256.json  convnext_tiny_tune_lr5e5.json  convnext_tiny_tune_lr5e5_img256.json  estimated_energy_ranges.json  model_comparison_convnext_tiny.json  model_comparison_efficientnet_b2.json  model_comparison_mobilenetv3_large.json  mvp_food_categories.json  selected_mvp_aug_context_mild.json  selected_mvp_aug_context_strong.json  selected_mvp_aug_random_erasing.json  selected_mvp_classifier.json
services/ai-inference/notebooks/: colab_retrain_baseline_v2.ipynb
services/ai-inference/nutriscan_ai_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-inference/scripts/: apply_misclassified_review.py  colab_retrain_baseline_v2.sh  curate_dataset.py  evaluate_model.py  export_misclassified.py  predict_image.py  prepare_dataset.py  train_classifier.py
services/ai-inference/tests/: test_curate_dataset.py  test_dataset_manifest.py  test_energy_lookup.py  test_evaluate_model.py  test_export_misclassified.py  test_infer_endpoint.py  test_inference_payload.py  test_runbook.py  (+4 more)
(+96 files in other folders)
