[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutriscan-ai-inference"
version = "0.1.0"
description = "NutriScan AI/ML inference service for food category recognition and estimated energy payloads."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "python-multipart",
  "uvicorn[standard]",
  "pydantic-settings",
  "torch",
  "torchvision",
  "timm",
  "pillow",
  "numpy",
  "scikit-learn",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "configs*", "notebooks*", "reports*", "model-artifacts*"]